wallabag/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallabag
  namespace: wallabag
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallabag
  template:
    metadata:
      labels:
        app: wallabag
    spec:
      containers:
        - name: wallabag
          image: wallabag/wallabag:2.5.1
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "512Mi"
              cpu: "100m"
      # volumes:
      # - name: wallabag-images
      #   persistentVolumeClaim:
      #     claimName: wallabag-images
