wallabag/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: wallabag
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7.0.4
          ports:
            - containerPort: 6379
          resources:
            limits:
              memory: "256Mi"
              cpu: "50m"
