wallabag/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallabag
  labels:
    app: wallabag
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: wallabag
