wallabag/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallabag-ingress
  namespace: wallabag
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-stage"
spec:
  tls:
    - hosts:
        - wallabag.512.ch
      secretName: wallabag-tls
  rules:
    - host: wallabag.512.ch
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: wallabag
              port:
                number: 80
